--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-#?????
+#MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/information_library?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Casey151224!
-#????
+spring.datasource.password=Andy401927
+#server
 server.port=8080
-#??mybatis
+#mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.gxu.informationLibrary.entity
 mybatis.configuration.map-underscore-to-camel-case=true
+#Redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.jedis.pool.max-active=8
