--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/information_library?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/information_library?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Andy401927
 #server
