--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0
 # ??????????
 spring.redis.timeout=1000
+spring.cache.cache-names=library
