--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.gxu</groupId>
 	<artifactId>information-library-system</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>information-library-system</name>
 	<description>information-library-system project for Spring Boot</description>
 	<properties>
