--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,11 @@ spring.redis.jedis.pool.max-wait=-1
 spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=1000
+#email
+spring.mail.host = smtp.qq.com
+spring.mail.username = 1281715740@qq.com
+spring.mail.password = tmmpylmesgpzfiif
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.default-encoding=UTF-8
 
 
