--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=Andy401927
 #server
 server.port=80
-spring.web.resources.static-locations=classpath:/static/,classpath:/templates/
+#spring.web.resources.static-locations=classpath:/static/,classpath:/templates/
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.gxu.informationLibrary.entity
